--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
     "multer": "^1.4.5-lts.1",
-    "openai": "^4.61.1"
+    "stripe": "^17.3.1"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
